--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onselectstart="return false" onmousedown="return false">
 	<div class="screen">
 		<div class="field">
 			<div class="row">
@@ -253,7 +253,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="buttons">
+	<div class="buttons" onselectstart="return false" onmousedown="return false">
 		<div class="arrows">
 			<div class="up"></div>
 			<div class="right"></div>
