--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="buttons" onselectstart="return false" onmousedown="return false">
+	<div class="buttons" ondblclick="return false" onselectstart="return false" onmousedown="return false">
 		<div class="arrows">
 			<div class="up"></div>
 			<div class="right"></div>
